Fix Footer Issue on Mobile, Change Dropdown Colors

--- a/style.css
+++ b/style.css
@@ -61,10 +61,12 @@ h1 {
   position: absolute;
   min-width: 100px;
   height: 2rem;
-  top: 0;
-  right: 0;
+  top: 5px;
+  right: 5px;
   padding: 0 10px;
-  font-size: 0.85rem;
+  font-size: 1rem;
+  color: var(--text-main);
+  background-color: var(--bookshelf-bg);
   -webkit-appearance: none;
   -moz-appearance: none;
 }
@@ -77,7 +79,7 @@ h1 {
   top: 0;
   padding: 5px;
   border-bottom: 1px solid var(--border-main);
-  background-color: var(--header-bg);
+  background-color: var(--bookshelf-bg);
 }
 
 .scroll-icon {
@@ -319,12 +321,20 @@ form input[type="checkbox"]:hover {
   font-size: 1rem;
 }
 
+#search-type,
+#status-filter,
+#sort-dropdown {
+  color: var(--text-main);
+  background-color: var(--header-bg);
+}
+
 .bookshelf {
   display: flex;
   flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
   width: 100%;
+  margin-bottom: 100px;
 }
 
 .book {
@@ -427,8 +437,9 @@ form input[type="checkbox"]:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
+  position: absolute;
   width: 100%;
+  height: 100px;
   padding: 10px;
   bottom: 0;
   left: 0;
@@ -522,5 +533,10 @@ a {
 
   .book {
     max-width: 300px;
+  }
+
+  .footer {
+    position: relative;
+    height: 75px;
   }
 }
